1.26.4	Better file checking in directory modes. Small fixes.
	
1.26.3	Directory mode in 'pplxs' implemented.
	
1.26.2	Better error checking.
	
1.26.1	Directory mode in 'correct'.
	
1.26.0	Directory mode in 'gt' implemented.
	
1.25.6	Counters in lexicon fixed (missing reset).
	
1.25.5	Better fix for size_t problems 32 bits computers.
	
1.25.4	Fix for bad input data.
	
1.25.3	Quick fix for 32 bits.
	
1.25.2	Implemented mrr in pplxs. This interferes with the caching
	mechanism which has been temporarily disabled until this is
	solved. 
	
1.25.1	Correct mrr output in mg file now.
	
1.25.0	Implementing MRR; change in mg output format.
	
1.24.4	Added distr_count to px output, changed mg output to resemble px
	output. 
1.24.3	Fixed output of probabilities bug in mg.
	
1.24.2	Extra parameters in focus. ffc now >=. 
	
1.24.1	Working focus and multi_gated. Made fco a parameter in mg.
	
1.24.0	Redid focus code and added new word expert multi classifier.
	
1.23.3	Changes in ngram_server
	
1.23.2	Deprecated server3. Use server4 in stead.
	
1.23.1	Moving away from heavy TimblServer dependency. Took the necessary
	SocketBasics files from TimblServer and incorporated them into
	Wopr. 
	
1.23.0	Introducing ngram_server with TimblServerAPI. Still work in progress.
	
1.22.6	Changes in generate and generate_server. Likelihood of choice now
	according to frequency.
	
1.22.5	Server4 added, still work in progress. Functionality might change
	again.
	
1.22.4	Removed default encapsulation of read_a3 output in <s></s>.
	Made ssym and esym parameters.
	
1.22.3	Changes in server3
	
1.22.2	Changes in server3
	
1.22.1	Changes in server3
	
1.22.0	Server3 added, server2 was very much out of date. Work in progress.
	
1.21.3	Added pplx_px.pl script to distribution.
	
1.21.2	Added deleting of parameters from scripts.
	
1.21.1	Small fixes in 'prepare'.
	
1.21.0	Threw the eos/sos parameters out again, solved in a better way
	with the 'prepare' function.
	